--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "app:watch": "npx shadow-cljs watch app",
     "css:watch": "npx tailwindcss -i ./src/css/tailwind.css -o ./public/css/app.css --verbose --watch",
+    "watch": "run-p -l app:watch css:watch",
     "clean": "rm -rf public/js public/css"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "shadow-cljs": "2.19.6",
